--- a/bein1.html
+++ b/bein1.html
@@ -274,30 +274,7 @@
 
     <div id="container">
 
-        <div id="player-container">
-            <script type="text/javascript">
-                jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
-                var playerInstance = jwplayer("player-container").setup({
-                    file: "https://live4.beinconnect.us/YallaGoalApp/beINSports1.m3u8",
-                    aspectratio: '16:9',
-                    width: '100%',
-                    image: 'images/bein1.png',
-                    autostart: true, // Disable autostart initially
-                    captions: { color: '#white', fontSize: '25%', backgroundOpacity: 0 },
-                    abouttext: 'kaitox-web',
-                    aboutlink: 'https://linktr.ee/kaitox-web',
-                    sharing: {
-                        sites: ['facebook', 'twitter', 'tumblr', 'googleplus', { icon: 'images/icon.png', src: 'http://www.jwplayer.com/?', label: 'jwplayer' }]
-                    },
-                    "Volume": "50",
-                    "mute": false,
-                    type: "hls",
-                   
-                });
-            </script>
-        </div>
-
-        <h3>Disclaimer</h3>
+<iframe src="http://kaitotv.duckdns.org:8080/2c5fa4f7-ec96-4e2b-aaa6-dd663516f613.html" width="640" height="360" frameborder="no" scrolling="no" allowfullscreen="true"></iframe>        <h3>Disclaimer</h3>
         <ul>
             <li>
               The Bein Network operates as a platform for broadcasting and
