--- a/bein3.html
+++ b/bein3.html
@@ -274,28 +274,7 @@
 
     <div id="container">
 
-        <div id="player-container">
-            <script type="text/javascript">
-                jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
-                var playerInstance = jwplayer("player-container").setup({
-                    file: "https://live4.beinconnect.us/YallaGoalApp/beINSports3.m3u8",
-                    aspectratio: '16:9',
-                    width: '100%',
-                    image: 'images/bein3.png',
-                    autostart: true, // Disable autostart initially
-                    captions: { color: '#white', fontSize: '25%', backgroundOpacity: 0 },
-                    abouttext: 'kaitox-web',
-                    aboutlink: 'https://linktr.ee/kaitox-web',
-                    sharing: {
-                        sites: ['facebook', 'twitter', 'tumblr', 'googleplus', { icon: 'images/icon.png', src: 'http://www.jwplayer.com/?', label: 'jwplayer' }]
-                    },
-                    "Volume": "50",
-                    "mute": false,
-                    type: "hls",
-                   
-                });
-            </script>
-        </div>
+        <iframe src="http://213.182.204.57:8080/4f3fb512-62ce-4311-aa2c-23238c5b6411.html" width="100%" height="480" frameborder="no" scrolling="no" allowfullscreen="true"></iframe>
 
         <h3>Disclaimer</h3>
         <ul>
