--- a/bein6.html
+++ b/bein6.html
@@ -278,7 +278,7 @@
             <script type="text/javascript">
                 jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
                 var playerInstance = jwplayer("player-container").setup({
-                    file: "https://live4.beinconnect.us/YallaGoalApp/beINSports6.m3u8",
+                    file: "http://213.182.204.57:8080/memfs/8b0a80c6-08c6-4068-bb46-f03c75685601.m3u8",
                     aspectratio: '16:9',
                     width: '100%',
                     image: 'images/bein6.png',
