--- a/beinex1.html
+++ b/beinex1.html
@@ -8,7 +8,7 @@
     <meta name="referrer" content="no-referrer">
     <link rel="icon" type="image/png" href="images/logo.png"
         sizes="128x128" style="border-radius: 5px;">
-    <title>Bein Sports 2 HD</title>
+    <title>Bein Sports Xtra 1 HD</title>
     <style>
         html,
         body {
@@ -269,12 +269,33 @@
 <body>
     <header>
         <img alt="Bein1" id="top-image"
-            src="images/bein2-icon.png" />
+            src="images/beinxtra1-icon.png" />
     </header>
 
     <div id="container">
 
-        <iframe src="http://213.182.204.57:8080/473de941-158a-413c-bb7d-8590e4d84320.html" width="100%" height="480" frameborder="no" scrolling="no" allowfullscreen="true"></iframe>
+        <div id="player-container">
+            <script type="text/javascript">
+                jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
+                var playerInstance = jwplayer("player-container").setup({
+                    file: "http://213.182.204.57:8080/memfs/38fc9b1a-77ed-459b-bb1f-32216cfd50b0.m3u8",
+                    aspectratio: '16:9',
+                    width: '100%',
+                    image: 'images/beinxtra1.png',
+                    autostart: true, // Disable autostart initially
+                    captions: { color: '#white', fontSize: '25%', backgroundOpacity: 0 },
+                    abouttext: 'kaitox-web',
+                    aboutlink: 'https://linktr.ee/kaitox-web',
+                    sharing: {
+                        sites: ['facebook', 'twitter', 'tumblr', 'googleplus', { icon: 'images/icon.png', src: 'http://www.jwplayer.com/?', label: 'jwplayer' }]
+                    },
+                    "Volume": "50",
+                    "mute": false,
+                    type: "hls",
+                   
+                });
+            </script>
+        </div>
 
         <h3>Disclaimer</h3>
         <ul>
