--- a/bein5.html
+++ b/bein5.html
@@ -273,8 +273,28 @@
     </header>
 
     <div id="container">
-
-<iframe src="http://kaitotv.duckdns.org:8080/743fdf19-7da5-4634-9d4e-4e93f9f3b459.html" width="640" height="360" frameborder="no" scrolling="no" allowfullscreen="true"></iframe>
+        <div id="player-container">
+            <script type="text/javascript">
+                jwplayer.key = 'XSuP4qMl+9tK17QNb+4+th2Pm9AWgMO/cYH8CI0HGGr7bdjo';
+                var playerInstance = jwplayer("player-container").setup({
+                    file: "http://213.182.204.57:8080/memfs/743fdf19-7da5-4634-9d4e-4e93f9f3b459.m3u8",
+                    aspectratio: '16:9',
+                    width: '100%',
+                    image: 'images/bein6.png',
+                    autostart: true, // Disable autostart initially
+                    captions: { color: '#white', fontSize: '25%', backgroundOpacity: 0 },
+                    abouttext: 'kaitox-web',
+                    aboutlink: 'https://linktr.ee/kaitox-web',
+                    sharing: {
+                        sites: ['facebook', 'twitter', 'tumblr', 'googleplus', { icon: 'images/icon.png', src: 'http://www.jwplayer.com/?', label: 'jwplayer' }]
+                    },
+                    "Volume": "50",
+                    "mute": false,
+                    type: "hls",
+                   
+                });
+            </script>
+        </div>
         <h3>Disclaimer</h3>
         <ul>
             <li>
